--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -99,7 +99,10 @@
         </activity>
 
         <!--*******************-->
-        <activity android:name="com.example.lenovo.uu.ui.LoginActivity" />
+        <activity android:name="com.example.lenovo.uu.ui.LoginActivity"
+            android:windowSoftInputMode="stateHidden|adjustPan" />
+
+
 
         <activity android:name="com.example.lenovo.uu.ui.LocationActivity" />
 
@@ -126,8 +129,11 @@
 
         <activity android:name="com.example.lenovo.uu.ui.SetMyInfoActivity" />
 
+        <activity android:name="com.example.lenovo.uu.ui.RegisterInPhone"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
         <activity
             android:name="com.example.lenovo.uu.ui.RegisterActivity"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:label="@string/app_name" />
 
         <!-- baidu map-->
