phone_verify_succeed!
phone_verify_succeed!
But it can't get correct instance when agree friend application....

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -130,7 +130,8 @@
         <activity android:name="com.example.lenovo.uu.ui.SetMyInfoActivity" />
 
         <activity android:name="com.example.lenovo.uu.ui.RegisterInPhone"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"/>
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize"/>
         <activity
             android:name="com.example.lenovo.uu.ui.RegisterActivity"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
