--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,6 +100,7 @@
 
         <!--*******************-->
         <activity android:name="com.example.lenovo.uu.ui.LoginActivity"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:windowSoftInputMode="stateHidden|adjustPan" />
 
 
