--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.github.zcweng:switch-button:0.0.3@aar'
-//    compile 'com.github.LidongWen:StickyDot:1.1.0'
+    //    compile 'com.github.LidongWen:StickyDot:1.1.0'
 //    compile 'com.gyf.barlibrary:barlibrary:2.2.7'
 //    compile 'com.github.XuDaojie:QRCode-Android:v0.4.2'
 //    compile 'cn.yipianfengye.android:zxing-library:2.2'
@@ -38,7 +37,6 @@ dependencies {
 //    compile files('libs/okio-1.7.0.jar')
 //    compile files('libs/butterknife-6.1.0.jar')
 
-    compile 'com.android.support:support-v4:18.0.0'
     compile files('libs/baidumapapi_v3_0_0.jar')
     compile files('libs/BmobIM_V1.1.4beta_1027.jar')
 //    compile files('libs/BmobSDK_V3.2.5_1027.jar')
@@ -55,6 +53,9 @@ dependencies {
 //    compile 'com.gyf.barlibrary:barlibrary:2.2.7'
 //    compile 'com.android.support:appcompat-v7:25.3.1'
 //    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.github.zcweng:switch-button:0.0.3@aar'
+    compile 'com.android.support:support-v4:18.0.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta2'
+    compile 'com.android.support:appcompat-v7:18.0.0'
     testCompile 'junit:junit:4.12'
 }
