--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
     <!-- Push SDK权限 -->
     <permission
         android:name="cn.bmob.permission.push"
-        android:protectionLevel="normal"></permission>
+        android:protectionLevel="normal" />
 
     <uses-permission android:name="cn.bmob.permission.push" /> <!-- 添加自定义的权限 -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -41,10 +41,10 @@
     <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
-    <uses-permission android:name="android.permission.BAIDU_LOCATION_SERVICE"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.BAIDU_LOCATION_SERVICE" />
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
     <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
-    <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_GPS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
@@ -52,14 +52,14 @@
     <uses-permission android:name="android.permission.SEND_SMS" />
     <!-- SDK1.5需要android.permission.GET_TASKS权限判断本程序是否为当前运行的应用? -->
     <uses-permission android:name="android.permission.GET_TASKS" />
-    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.BROADCAST_STICKY" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <!-- 来电消音 -->
-    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS"></uses-permission>
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
     <!-- 这个权限用于进行网络定位 -->
@@ -74,23 +74,22 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <!-- 用于读取手机当前的状态 -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
     <!-- baidumap 所需的权限 -end -->
-
-
     <application
-        android:name="com.example.lenovo.uu.CustomApplcation"
+        android:name=".CustomApplcation"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name="com.example.lenovo.uu.ui.MainActivity"
+        <activity
+            android:name=".ui.MainActivity"
             android:launchMode="singleTask"
             android:windowSoftInputMode="stateAlwaysHidden|adjustPan" />
-
-        <activity android:name="com.example.lenovo.uu.ui.SplashActivity"
-            android:label="@string/app_name" >
+        <activity
+            android:name=".ui.SplashActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -98,49 +97,39 @@
             </intent-filter>
         </activity>
 
-        <!--*******************-->
-        <activity android:name="com.example.lenovo.uu.ui.LoginActivity"
+        <!-- ******************* -->
+        <activity
+            android:name=".ui.LoginActivity"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:windowSoftInputMode="stateHidden|adjustPan" />
-
-
-
-        <activity android:name="com.example.lenovo.uu.ui.LocationActivity" />
-
-        <activity android:name="com.example.lenovo.uu.ui.BlackListActivity" />
-
-        <activity android:name="com.example.lenovo.uu.ui.ImageBrowserActivity" />
-
+        <activity android:name=".ui.LocationActivity" />
+        <activity android:name=".ui.BlackListActivity" />
+        <activity android:name=".ui.ImageBrowserActivity" />
         <activity
-            android:name="com.example.lenovo.uu.ui.AddFriendActivity"
+            android:name=".ui.AddFriendActivity"
             android:windowSoftInputMode="stateHidden|adjustPan" />
-
-        <activity android:name="com.example.lenovo.uu.ui.NewFriendActivity" />
-        <activity android:name="com.example.lenovo.uu.ui.NearPeopleActivity" />
-
-        <activity android:name="com.example.lenovo.uu.ui.UpdateInfoActivity" />
-
-        <activity android:name="com.example.lenovo.uu.ui.MyTwoCodeActivity" />
-
-        <activity android:name="com.example.lenovo.uu.ui.CommonScanActivity" />
-
+        <activity android:name=".ui.NewFriendActivity" />
+        <activity android:name=".ui.NearPeopleActivity" />
+        <activity android:name=".ui.UpdateInfoActivity" />
+        <activity android:name=".ui.MyTwoCodeActivity" />
+        <activity android:name=".ui.CommonScanActivity" />
         <activity
-            android:name="com.example.lenovo.uu.ui.ChatActivity"
+            android:name=".ui.ChatActivity"
             android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
-
-        <activity android:name="com.example.lenovo.uu.ui.SetMyInfoActivity" />
-
-        <activity android:name="com.example.lenovo.uu.ui.UpdateInPhone" />
-
-        <activity android:name="com.example.lenovo.uu.ui.RegisterInPhone"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-            android:windowSoftInputMode="stateAlwaysHidden|adjustResize"/>
+        <activity android:name=".ui.SetMyInfoActivity" />
+        <activity android:name=".ui.UpdateInPhone" />
         <activity
-            android:name="com.example.lenovo.uu.ui.RegisterActivity"
+            android:name=".ui.RegisterInPhone"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-            android:label="@string/app_name" />
+            android:windowSoftInputMode="stateAlwaysHidden|adjustResize" />
+        <activity
+            android:name=".ui.RegisterActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
+        <activity android:name=".ui.ResetPassword"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" ></activity>
 
-        <!-- baidu map-->
+        <!-- baidu map -->
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="GbYwjFfEkMs3b6Fhe7vytNG55rGMHW2z" />
@@ -148,27 +137,26 @@
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
-            android:process=":remote" >
+            android:process=":remote">
             <intent-filter>
-                <action android:name="com.baidu.location.service_v2.2" >
-                </action>
+                <action android:name="com.baidu.location.service_v2.2"></action>
             </intent-filter>
         </service>
 
-        <!-- IM聊天所需的Push start-->
+        <!-- IM聊天所需的Push start -->
         <service
             android:name="cn.bmob.push.lib.service.PushService"
             android:exported="true"
             android:label="PushService"
             android:permission="cn.bmob.permission.push"
-            android:process="cn.bmob.push" >
+            android:process="cn.bmob.push">
             <intent-filter>
                 <action android:name="cn.bmob.push.lib.service.PushService" />
             </intent-filter>
         </service>
 
-        <receiver android:name="cn.bmob.push.PushReceiver" >
-            <intent-filter android:priority="2147483647" > <!-- 优先级加最高 -->
+        <receiver android:name="cn.bmob.push.PushReceiver">
+            <intent-filter android:priority="2147483647"> <!-- 优先级加最高 -->
                 <!-- 系统启动完成后会调用 -->
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <!-- 解锁完成后会调用 -->
@@ -177,20 +165,22 @@
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
         </receiver>
-        <receiver android:name=".MyMessageReceiver" >
+        <receiver android:name=".MyMessageReceiver">
             <intent-filter>
                 <action android:name="cn.bmob.push.action.MESSAGE" />
             </intent-filter>
         </receiver>
 
-        <!-- IM聊天所需的Push end-->
+        <!-- IM聊天所需的Push end -->
+
 
         <!-- 启动定时检测操作 -->
         <service android:name="cn.bmob.im.poll.BmobPollService">
             <intent-filter>
-                <action android:name="cn.bmob.im.service.BmobPollService"/>
+                <action android:name="cn.bmob.im.service.BmobPollService" />
             </intent-filter>
         </service>
+
     </application>
 
 </manifest>
